--- a/src/bookstore/gui/xml/Cart.fxml
+++ b/src/bookstore/gui/xml/Cart.fxml
@@ -1,107 +1,244 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" fx:id="containtCreator" prefHeight="800" prefWidth="1200.0" stylesheets="@cart.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.CartController">   <children>
-      <ListView fx:id="bookList" fixedCellSize="-25.0" layoutX="37.0" layoutY="97.0" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#myBooks" prefHeight="499.0" prefWidth="466.0" style="-fx-background-radius: 25px; font-family: monospace; -fx-border-radius: 25px; -fx-padding: 10px; font size: 24px;" />  
+      <ListView fx:id="bookList" fixedCellSize="-100.0" layoutX="38.0" layoutY="344.0" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#myBooks" prefHeight="254.0" prefWidth="466.0" style="-fx-background-radius: 25px; -fx-font-family: fort; -fx-border-radius: 25px; -fx-padding: 10px; font size: 24px;">
+         <cursor>
+            <Cursor fx:constant="CROSSHAIR" />
+         </cursor></ListView>  
 
-      <Pane layoutX="538.0" layoutY="99.0" prefHeight="622.0" prefWidth="638.0" style="-fx-background-color: rgba(255,255,255,0.25); -fx-background-radius: 25px;">
+      <Pane layoutX="537.0" layoutY="103.0" prefHeight="622.0" prefWidth="638.0" style="-fx-background-color: rgba(255,255,255,0.25); -fx-background-radius: 25px;">
          <children>
-            <Button fx:id="nextBook" layoutX="563.0" layoutY="569.0" mnemonicParsing="false" onAction="#next" style="-fx-background-color: #ff6347; -fx-background-radius: 25px;" text="→" textFill="WHITE">
+            <Button fx:id="nextBook" layoutX="576.0" layoutY="562.0" mnemonicParsing="false" onAction="#next" prefWidth="49.0" style="-fx-background-radius: 25px; -fx-padding: 0;" text="→" textFill="WHITE">
                <font>
-                  <Font name="Arial Narrow Bold" size="23.0" />
+                  <Font name="Arial Narrow Bold" size="49.0" />
                </font>
+               <effect>
+                  <Lighting>
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant />
+                     </light>
+                  </Lighting>
+               </effect>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button fx:id="lastBook" layoutX="22.0" layoutY="569.0" mnemonicParsing="false" onAction="#last" style="-fx-background-color: #ff6347; -fx-background-radius: 25px;" text="←" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="lastBook" layoutX="12.0" layoutY="562.0" mnemonicParsing="false" onAction="#last" style="-fx-background-radius: 25px; -fx-padding: 0px;" text="←" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Arial Narrow Bold" size="23.0" />
+                  <Font name="Arial Narrow Bold" size="49.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <effect>
+                  <Lighting>
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant />
+                     </light>
+                  </Lighting>
+               </effect>
             </Button>
-            <Pane fx:id="bookCover" layoutX="22.0" layoutY="120.0" prefHeight="433.0" prefWidth="319.0" style="-fx-background-color: white; -fx-background-radius: 25px;" />
-            <Label fx:id="title" layoutX="95.0" layoutY="36.0" text="BOOK1" textFill="WHITE">
+            <Label fx:id="title" layoutX="95.0" layoutY="36.0" textFill="WHITE">
                <font>
-                  <Font size="32.0" />
+                  <Font name="Forte" size="31.0" />
                </font>
             </Label>
-            <Label fx:id="name" layoutX="350.0" layoutY="136.0" prefHeight="35.0" prefWidth="121.0" text="Name : ">
+            <Label fx:id="name" layoutX="350.0" layoutY="136.0" prefHeight="35.0" prefWidth="278.0" text=" ">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Forte" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="writer" layoutX="349.0" layoutY="186.0" prefHeight="35.0" prefWidth="138.0" text="Writer :">
+            <Label fx:id="writer" layoutX="349.0" layoutY="186.0" prefHeight="35.0" prefWidth="278.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Forte" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="type" layoutX="350.0" layoutY="234.0" text="Categories:">
+            <Label fx:id="type" layoutX="350.0" layoutY="225.0" prefHeight="66.0" prefWidth="278.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Forte" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="price" layoutX="249.0" layoutY="590.0" text="Price : ---DTN" textFill="RED">
+            <Label fx:id="price" alignment="CENTER" layoutX="59.0" layoutY="549.0" prefHeight="39.0" prefWidth="524.0" textAlignment="JUSTIFY">
                <font>
-                  <Font size="24.0" />
+                  <Font name="Forte" size="34.0" />
+               </font>
+               <textFill>
+                  <LinearGradient endX="0.1380952380952381" endY="1.0" startX="0.13333333333333333" startY="0.44285714285714284">
+                     <stops>
+                        <Stop color="#ff005e" />
+                        <Stop color="#ff005e" offset="0.24904214559386972" />
+                        <Stop color="#400000" offset="0.5210727969348659" />
+                        <Stop color="#400000" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </textFill>
+            </Label>
+            <Label fx:id="rating" layoutX="291.0" layoutY="77.0">
+               <font>
+                  <Font name="Forte" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="rating" layoutX="291.0" layoutY="77.0" text="Rating : ">
+            <Label fx:id="disc" layoutX="350.0" layoutY="386.0" prefHeight="169.0" prefWidth="278.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Forte" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="disc" layoutX="345.0" layoutY="380.0" prefHeight="169.0" prefWidth="278.0" text="Discription :">
+            <Label fx:id="usr" layoutX="349.0" layoutY="292.0" prefHeight="66.0" prefWidth="278.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Forte" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="usr" layoutX="349.0" layoutY="286.0" text="Containt Creator :">
+            <Label fx:id="house" layoutX="350.0" layoutY="358.0" prefHeight="66.0" prefWidth="278.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Forte" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="house" layoutX="350.0" layoutY="337.0" prefHeight="43.0" prefWidth="195.0" text="Edition House : ">
+            <ImageView fx:id="bookCover" fitHeight="374.0" fitWidth="303.0" layoutX="6.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@img/book.jpg" />
+               </image></ImageView>
+         </children>
+      </Pane>
+      <Button fx:id="remove" layoutX="48.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnr" prefHeight="38.0" prefWidth="138.0" style="-fx-background-radius: 15;" text="Remove" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect></Button>
+      <Button fx:id="buy" layoutX="360.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnb" prefHeight="38.0" prefWidth="152.0" style="-fx-background-radius: 15px;" text="Buy Cart" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect></Button>
+      <Button fx:id="clearCart" layoutX="201.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnc" prefHeight="38.0" prefWidth="146.0" style="-fx-background-radius: 15px;" text="Clear Cart" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect></Button>
+      <Button fx:id="search" layoutX="360.0" layoutY="623.0" mnemonicParsing="false" onAction="#btns" prefHeight="38.0" prefWidth="152.0" style="-fx-background-radius: 15px;" text="Search" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <TextField fx:id="searchBar" layoutX="191.0" layoutY="623.0" prefHeight="38.0" prefWidth="159.0" style="-fx-background-radius: 25px;">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <Label alignment="CENTER" layoutX="473.0" layoutY="24.0" prefHeight="38.0" prefWidth="246.0" text="Cart" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="Forte" size="51.0" />
+         </font>
+      </Label>
+      <Button fx:id="cnl" layoutX="48.0" layoutY="623.0" mnemonicParsing="false" onAction="#btncnl" prefHeight="38.0" prefWidth="138.0" style="-fx-background-radius: 15;" text="Cancel" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect>
+      </Button>
+      <Pane layoutX="38.0" layoutY="113.0" prefHeight="220.0" prefWidth="466.0" style="-fx-background-color: rgba(255,255,255,0.25); -fx-border-radius: 25px; -fx-background-radius: 25px;">
+         <children>
+            <Label fx:id="cartQTE" layoutX="23.0" layoutY="32.0" prefHeight="35.0" prefWidth="420.0">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Forte" size="26.0" />
+               </font>
+            </Label>
+            <Label fx:id="worth" layoutX="23.0" layoutY="93.0" prefHeight="35.0" prefWidth="420.0">
+               <font>
+                  <Font name="Forte" size="26.0" />
+               </font>
+            </Label>
+            <Label fx:id="bookListText" layoutX="23.0" layoutY="154.0" prefHeight="35.0" prefWidth="420.0">
+               <font>
+                  <Font name="Forte" size="26.0" />
                </font>
             </Label>
          </children>
       </Pane>
-      <Button fx:id="remove" layoutX="48.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnr" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15;" text="Remove" textFill="WHITE">
-         <font>
-            <Font size="16.0" />
-         </font></Button>
-      <Button fx:id="buy" layoutX="364.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnb" prefHeight="38.0" prefWidth="152.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Buy Cart" textFill="WHITE">
-         <font>
-            <Font size="16.0" />
-         </font></Button>
-      <Button fx:id="clearCart" layoutX="201.0" layoutY="674.0" mnemonicParsing="false" onAction="#btnc" prefHeight="38.0" prefWidth="146.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Clear Cart" textFill="WHITE">
-         <font>
-            <Font size="16.0" />
-         </font></Button>
-      <Button fx:id="search" layoutX="360.0" layoutY="623.0" mnemonicParsing="false" onAction="#btns" prefHeight="38.0" prefWidth="152.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15px;" text="Search" textFill="WHITE">
-         <font>
-            <Font size="16.0" />
-         </font></Button>
-      <TextField fx:id="searchBar" layoutX="191.0" layoutY="623.0" prefHeight="38.0" prefWidth="159.0" style="-fx-background-radius: 25px;">
-         <font>
-            <Font size="16.0" />
-         </font></TextField>
-      <Label alignment="CENTER" layoutX="473.0" layoutY="24.0" prefHeight="38.0" prefWidth="246.0" text="Cart" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="Bodoni MT Condensed Bold" size="51.0" />
-         </font>
-      </Label>
-      <Button fx:id="cnl" layoutX="48.0" layoutY="623.0" mnemonicParsing="false" onAction="#btncnl" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #ff6347; -fx-background-radius: 15;" text="Cancel" textFill="WHITE">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
    </children>
    <styleClass>
       <String fx:value="mainFxmlClass" />
